Adicionado tela de agradecimento

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,4 +2,8 @@
 
 body {
   font-family: "Inter", sans-serif;
+  min-height: 100svh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
