--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,6 +121,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  @apply bg-gray-50 dark:bg-gray-950;
 }
 
 @tailwind base;
